--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -101,6 +101,9 @@
                 <div id="ram">
                     <ol id="FileManager"></ol>
                 </div>
+                <div>
+                    <img id="logo-pic" src="~/Content/Icons/ajeapic.png" />
+                </div>
             </div>
         </div>
         <div class="col-md-10" id="editorArea">
