--- a/WebApplication1/WebApplication1/Content/bootstrapnonscroll.css
+++ b/WebApplication1/WebApplication1/Content/bootstrapnonscroll.css
@@ -196,9 +196,9 @@ body {
     border:0px;
 }
 #ram {
-    min-height:100%;
-    max-height:100%;
-    height:100%;
+    min-height:78%;
+    max-height:78%;
+    height:78%;
     width:100%;
     max-width:100%;
     min-width:100%;
@@ -209,6 +209,11 @@ body {
     overflow-x:hidden;
     overflow-y:hidden;
     background:#303030;
+}
+
+#logo-pic{
+    width:100%;
+    height:18%;
 }
 /*
     <div id="tinybox"></div>
