--- a/WebApplication1/WebApplication1/Content/style67.css
+++ b/WebApplication1/WebApplication1/Content/style67.css
@@ -289,12 +289,18 @@ p {
 .saveIcon {
     width:10px;
     height:10px;
-    float: right;
+    /*float: right;*/
     background-image: url('../img/300px-Button_Icon_Green.svg.png');
     background-size:10px 10px;
     background-repeat:no-repeat;
-    margin-top:5%;
+    margin-top:10px;
+    margin-left:0px;float:left;
    
+}
+.saveBox{
+    float:left;
+    width:70px;
+    height:40px;
 }
 #showcontent {
     width:300px;
