--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -36,89 +36,91 @@
 <div class="col-md-12" id="Container">
     <div class="col-md-12" id="bodyArea">
         <div class="col-md-2" id="headerAreaFirstDiv">
-           
+
             @*<span id="spantext">js</span>*@
             <!-- open and close settings -->
             <div id="boxie">
                 <i class="fa fa-cog fa-1x" aria-hidden="false"></i>
-            
+
             </div>
-       
+
             <div id="boxieR"><i class="fa fa-cog fa-2x" aria-hidden="false"></i></div>
-           
-                @*  <div id="errormess"><span id="valid"></span></div>*@
+
+            @*  <div id="errormess"><span id="valid"></span></div>*@
 
 
-                <!-- Settings -->
-                <div id="showcontent">
-                    <h2 id="CommandHeader">Settings</h2>
-                    <div class="myboxopenarea">
-                        <div class="anitfloat">
-                            <div class="clickmetoopen" id="firstopen"></div>
-                            <p class="textOpener">Editor fullscreen</p>
-                        </div>
-                        <div class="anitfloat" id="testfloat">
-                            <p class="spanCommandP"><span title="Full screen coding" id="full1" class="spanpointer">Fullscreen</span></p>
-                            <p class="spanCommandP"><span title="Revert full screen into normal size" id="rev1" class="spanpointer">Window Mode</span></p>
-                        </div>
-                        <div class="anitfloat">
-                            <div class="clickmetoopenLang" id="thirdopen"></div>
-                            <p class="textOpener">Editor coding languages</p>
-                        </div>
-                        <div class="anitfloat" id="imtestfloating">
-                            <p class="spanCommandP"><span title="Web" id="html1" class="spanpointer">HTML</span></p>
-                            <p class="spanCommandP"><span title="Styling" id="css1" class="spanpointer">CSS</span></p>
-                            <p class="spanCommandP"><span title="Functions" id="js1" class="spanpointer">JavaScript</span></p>
-                            <p class="spanCommandP"><span title="Object oriented" id="cs1" class="spanpointer">C#</span></p>
-                            <p class="spanCommandP"><span title="Functions/web" id="phps" class="spanpointer">PHP</span></p>
-                            <p class="spanCommandP"><span title="Database" id="sqls" class="spanpointer">SQL</span></p>
-                        </div>
-                        <div class="anitfloat">
-                            <div class="clickmetoopenThemes" id="secondopen"></div>
-                            <p class="textOpener">Editor themes</p>
-                        </div>
-                        <div class="anitfloat" id="testfloatThemes">
-                            <p class="spanCommandP"><span title="Monokai is a dark theme" id="mn1" class="spanpointer">monokai theme</span></p>
-                            <p class="spanCommandP"><span title="Iplastic is a bright gray theme" id="isp1" class="spanpointer">iplastic theme</span></p>
-                            <p class="spanCommandP"><span title="Cobalt is a dark blue theme" id="cb1" class="spanpointer">cobalt theme</span></p>
-                            <p class="spanCommandP"><span title="Tomorrow is a white theme" id="tm1" class="spanpointer">tomorrow theme</span></p>
-                        </div>
+            <!-- Settings -->
+            <div id="showcontent">
+                <h2 id="CommandHeader">Settings</h2>
+                <div class="myboxopenarea">
+                    <div class="anitfloat">
+                        <div class="clickmetoopen" id="firstopen"></div>
+                        <p class="textOpener">Editor fullscreen</p>
+                    </div>
+                    <div class="anitfloat" id="testfloat">
+                        <p class="spanCommandP"><span title="Full screen coding" id="full1" class="spanpointer">Fullscreen</span></p>
+                        <p class="spanCommandP"><span title="Revert full screen into normal size" id="rev1" class="spanpointer">Window Mode</span></p>
+                    </div>
+                    <div class="anitfloat">
+                        <div class="clickmetoopenLang" id="thirdopen"></div>
+                        <p class="textOpener">Editor coding languages</p>
+                    </div>
+                    <div class="anitfloat" id="imtestfloating">
+                        <p class="spanCommandP"><span title="Web" id="html1" class="spanpointer">HTML</span></p>
+                        <p class="spanCommandP"><span title="Styling" id="css1" class="spanpointer">CSS</span></p>
+                        <p class="spanCommandP"><span title="Functions" id="js1" class="spanpointer">JavaScript</span></p>
+                        <p class="spanCommandP"><span title="Object oriented" id="cs1" class="spanpointer">C#</span></p>
+                        <p class="spanCommandP"><span title="Functions/web" id="phps" class="spanpointer">PHP</span></p>
+                        <p class="spanCommandP"><span title="Database" id="sqls" class="spanpointer">SQL</span></p>
+                    </div>
+                    <div class="anitfloat">
+                        <div class="clickmetoopenThemes" id="secondopen"></div>
+                        <p class="textOpener">Editor themes</p>
+                    </div>
+                    <div class="anitfloat" id="testfloatThemes">
+                        <p class="spanCommandP"><span title="Monokai is a dark theme" id="mn1" class="spanpointer">monokai theme</span></p>
+                        <p class="spanCommandP"><span title="Iplastic is a bright gray theme" id="isp1" class="spanpointer">iplastic theme</span></p>
+                        <p class="spanCommandP"><span title="Cobalt is a dark blue theme" id="cb1" class="spanpointer">cobalt theme</span></p>
+                        <p class="spanCommandP"><span title="Tomorrow is a white theme" id="tm1" class="spanpointer">tomorrow theme</span></p>
                     </div>
                 </div>
-           
-                <!-- Preview button -->
-                <div id="form_button">
-                    @using (Html.BeginForm("Action", "Controller", FormMethod.Get, new { target = "_blank" }))
-                    {
-                        <input type="submit" value="Run preview" id="preview_button" />
-                        <input style="display:none" type="text" id="testData" name="reportName" />
+            </div>
+
+            <!-- Preview button -->
+            <div id="form_button">
+                @using (Html.BeginForm("Action", "Controller", FormMethod.Get, new { target = "_blank" }))
+                {
+                    <input type="submit" value="Run preview" id="preview_button" />
+                    <input style="display:none" type="text" id="testData" name="reportName" />
 
 
-                        @*@using (Html.BeginForm())
+                    @*@using (Html.BeginForm())
                     {
                         // <input type="text" id="testData" />
                         <input type="submit" value="Run preview" id="preview_button" />
                         <input style="display:none" type="text" id="testData" name="reportName" />
 
                     }*@
-                    }
-                </div>
+                }
+            </div>
             <!-- Save button -->
-            <button type="button" class="btn">
-                Save
-            </button>
-            <i class="saveIcon" aria-hidden="true" style="display:none"></i>
-</div>
+            <div class="saveBox">
+                <button type="button" class="btn">
+                    Save
+
+                </button>
+            </div><i class="saveIcon" style="display:none"></i>
+        </div>
         <!-- Area for tabs -->
         <div class="col-md-10" id="HeaderAreaSecondDiv">
             <div id="tabs">
                 <ul id="sortable">
                     <li id="measureMentTab"><a>MeasureMent Tab</a> <span class="ui-icon ui-icon-close" role="presentation"></span></li>
-                    
+
                 </ul>
-   
+
             </div>
-           
+
         </div>
         <!--A Hidden window that will appear when the user want to create a file -->
         <div id="dialog" title="Create New File">
@@ -136,7 +138,7 @@
                 </fieldset>
             </form>
         </div>
-               <div class='fileMenu'>
+        <div class='fileMenu'>
             <button class="fileMenuButton" id="CreateFileButton">Create New File</button>
             <button class="fileMenuButton" id="DeleteFileButton">Delete File</button>
         </div>
@@ -159,6 +161,7 @@
             <div id="term"></div>
         </div>
     </div>
+
 </div>
 <!-- Kod nedan ska bytas ut och sättas över -->
 <!-- Kod nedan ska bytas ut och sättas över -->
