--- a/WebApplication1/WebApplication1/Content/Site.css
+++ b/WebApplication1/WebApplication1/Content/Site.css
@@ -60,7 +60,7 @@ box-shadow: 0px -5px 5px 0px rgba(0,0,0,0.75);
             padding-left: 0em;
             font-size: 1.0em;
             height: 15px;
-           
+           padding-top:0;
         }
 
             #sortable li span {
